# yolov11n

./: README.md  TABLE.md  pyproject.toml
config/: default.yaml
config/datasets/: Cellpose.yaml  TXL.yaml
docs/datasets/: cellpose.md  txl.md
scripts/: convert_cellpose.py  display_results.py
src/: run_comparison.py  run_export.py  run_train.py
src/training/: finetune.py  prune.py  trainer.py
src/utils/: __init__.py  model_utils.py
