[project]
name = "yolov11n-pruning"
version = "0.1.0"
description = "YOLOv11n pruning and finetuning experiments"
requires-python = ">=3.10"
dependencies = [
    "ultralytics @ git+https://github.com/ultralytics/ultralytics.git",
    "torch>=2.0.0",
    "torch-pruning>=1.4.0",
    "onnxruntime>=1.16.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
